# senior-thesis

./: .gitignore  README.md  coordinator.py  document_storages.py  embeddings.py  generator.py  models.py  prompts.py  pyproject.toml  requirements.txt  retriever.py  retrievers.py  scraper.py  sources.py  text_splitters.py  util.py  vector_storages.py
api_exploration/: nytimes.ipynb
experiments/: evaluate_reports.ipynb  generate_questions.ipynb  generate_reports.ipynb  generate_reports_vanilla.ipynb  reports.csv  run_kruppe.ipynb
experiments/human_report/: AI Infrastructure Spending Resilient Despite Market Pullback.pdf.txt  Ad Agencies Braced for Muted Sales Gains on Pressured Budgets.pdf.txt  Ad-Spending Slowdown Creates 2025 Growth Clouds for Agencies.pdf.txt  Amazon’s DSP Likely Adds to Trade Desk Woes Amid Kokai Slowdown.pdf.txt  Amazon’s Fastest-Rising and Most Profitable Segment Advertising.pdf.txt  Deutsche Bank NVDA NVIDIA Corporation GTC 2025 Preview.pdf.txt  JP Morgan NVDA NVIDIA Corporation Solid ResultsGuide on Continued Str.pdf.txt  Mizuho Securities CRDO DeepSeek Call #2 - Capex TRENDS wPre-Training, Post-Tra.pdf.txt  Omnicom, Interpublic Can Weather Potential RFK Jr. Pharma-Ad Ban.pdf.txt  Wells Fargo NVDA NVDA NVDA GTC 2025 Can't Come Fast Enough—A Quick Rev.pdf.txt
experiments/kruppe_report/: AI Semiconductor Market Outlook Amid Geopolitical Tensions and Economic Pressures.txt  Amazon DSP vs TTD in Connected TV Advertising Market.txt  Amazon_Advertising_Business_Developments_And_Projections.txt  Impact_of_Potential_Ban_on_Pharmaceutical_Advertising_Revenue_for_Omnicom_and_Interpublic.txt  Implications_of_Global_Advertising_Spending_Slowdown_2025_Report.txt  NVIDIA_Financial_Prospects_Investment_Potential_Report.txt  NVIDIA_GTC_2025_Expectations_Report.txt  NVIDIA_Stock_Performance_Outlook_GTC_2025.txt  Outlook for Organic Sales Growth in Advertising Amid Economic Uncertainty.txt  Semiconductor_Capital_Expenditures_2023_Trends_Projections.txt
experiments/old_1/: evaluation.json  reports.csv
experiments/vanilla_report/: AI_Semiconductor_Market_Outlook_October_2023.txt  Amazon Advertising Growth and Market Positioning.txt  Amazon DSP's Impact on The Trade Desk in CTV Advertising.txt  Impact of Pharmaceutical Advertising Ban on Omnicom and Interpublic Revenues.txt  Implications of 2025 Global Advertising Spending Slowdown.txt  NVIDIA_GTConference_2025_KeyTopics_Expectations.txt  NVIDIA_Investment_Potential_AAI_and_Growth_Analysis.txt  NVIDIA_Stock_Outlook_GTC_2025_Factors_Influencing_Performance.txt  Outlook_for_Organic_Sales_Growth_in_Advertising_Industry.txt  SemiconductorIndustryTrends2023_GPU_Demand_Tariffs_CapEx.txt
gradio_app/: README.md  app.py  block_background.py  block_hypothesis.py  block_librarian.py  block_overseer.py  compare.py  delete_later.py  gradrag.py  page_compare.py  page_kruppe.py  stream_logs.py
gradio_app/components/: coordinator.py  hypothesis.py  librarian.py  reports.py
gradio_app/old/: block_background.py  block_hypothesis.py  stream_logs.py
gradio_app/utils/: tools.py
gradio_app_old/: block_coordinator.py  block_librarian.py  page_kruppe.py
notebooks/: Advanced Web Scraping with JavaScript.ipynb  ftimes.ipynb  guardian.ipynb  httpx.ipynb  hugging-face-dataset.ipynb  lexisnexis.ipynb  llm-core-idea.ipynb  llm-discord-question.ipynb  llm-risk-extraction.ipynb  yfinance.ipynb
notebooks/data_collection/: Advanced Web Scraping with JavaScript.ipynb  ftimes.ipynb  ftimes2.ipynb  lexisnexis.ipynb  mongodb.ipynb  nytimes.ipynb  parse-financial-doc.ipynb  yfinance.ipynb
notebooks/experiments/: agents.ipynb  algorithm.ipynb  background.ipynb  background_research.ipynb  coordinator.ipynb  hyp_researcher.ipynb  logging.ipynb
notebooks/playground/: background.ipynb  bkg_report.txt  hypothesis.ipynb  librarian.ipynb  overseer.ipynb  populate_rag.ipynb
src/kruppe/: document_store.py  llm.py  models.py  operate.py  prompt_formatter.py  prompts.py  qa_story.py  scripts.py  utils.py
src/kruppe/agents/: main.py  story.py
src/kruppe/algorithm/: agents.py  background.py  coordinator.py  hypothesis.py  librarian.py  main.py  overseer.py  story.py  utils.py
src/kruppe/common/: log.py  utils.py
src/kruppe/data_source/: base_source.py  directory.py  ft.py  google.py  lexis.py  newsapi.py  nyt.py  scraper.py  utils.py
src/kruppe/functional/: base_tool.py  document_store.py  fakehub.py  finhub.py  llm_helper.py  llmquery.py  newshub.py  ragquery.py
src/kruppe/prompts/: background.py  coordinator.py  experiments.py  functional.py  hypothesis.py  librarian.py  old.py  rag.py
src/kruppe/scraper/: __init__.py  base_source.py  directory.py  ft.py  google.py  lexis.py  newsapi.py  nyt.py  utils.py
src/rag/: __init__.py  coordinator.py  database.py  document_storages.py  document_store.py  embeddings.py  generator.py  llm.py  main.py  models.py  operate.py  prompts.py  qa_story.py  retriever.py  retrievers.py  scraper.py  scripts.py  sources.py  text_splitters.py  vector_storages.py
src/rag/agents/: main.py  searcher.py  story.py
src/rag/index/: base_index.py  contextual_index.py  vectorstore_index.py
src/rag/post_processor/: base_reranker.py
src/rag/retriever/: base_retriever.py  simple_retriever.py
src/rag/scraper/: __init__.py  base_source.py  directory.py  ft.py  google.py  lexis.py  newsapi.py  nyt.py  utils.py
src/rag/tools/: scraper.py  searcher.py  sources.py
src/rag/vector_store/: base_store.py  chroma_store.py  in_memory.py  milvus.py  milvus_store.py  numpy_store.py
src/rag/vectorstore/: __init__.py  base_store.py  (+3 more)
tests/: conftest.py  test_llm.py
tests/data_sources/: test_finance.py  test_scraper.py  test_sources.py
tests/functional/: test_document_storages.py  test_finhub.py  test_newshub.py  test_ragquery.py
tests/rag/: test_database.py  test_document_storages.py  test_embeddings.py  test_index.py  test_llm.py  test_prompts.py  test_retriever.py  test_retrievers.py  test_scraper.py  test_sources.py  test_splitters.py  test_vector_storages.py
tests/scraper/: test_scraper.py  test_sources.py
(+49 files in other folders)
