[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FinRAG"
dynamic = ["version"]
description = "Task Specialized RAG for Financial Analysis"
readme = "README.md"
requires-python = ">=3.10, <3.13"
authors = [{ name = "Daniel", email = "daniel.liu@stern.nyu.edu" }]
dependencies = [
    "numpy>=2.1.0",
    "openai>=1.52.0",
    "pydantic==2.10.0",
    "pymilvus>=2.4.0",
    "chromadb==0.5.20",
    "requests",
    "httpx>=0.27.2",
    "selenium>=4.25.0", 
    "beautifulsoup4",
    "lxml>=5.3.0",
    "lexisnexisapi", 
    "yfinance==0.2.50",
    "langchain_text_splitters>=0.3.0",
    "pymongo>=4.1, <5",
    "motor>=3.6.0",
    "pypdf==5.1.0"
]

[project.optional-dependencies]
jupyter = [
    "ipykernel",
    "jupyterlab",
    "pandas>=2.2.0",
    "ipywidgets>=8.0.0",
    "matplotlib==3.9.2",
    "IPython[all]>=8.29.0",
    "nest_asyncio"
]
gradio = [
    "gradio==5.8.0"
]
ml = [
    "torch==2.5.1",
    "transformers",
    "datasets",
]

[project.scripts]
finrag = "rag.scripts:main"
finrag-load = "rag.agents.main:main"

[project.urls]
Repo = "https://github.com/CloudyLeopard/senior-thesis"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.hatch.version]
path = "src/rag/__about__.py"

[tool.hatch.envs.experimental]
features = [
    'jupyter',
    'gradio'
    # 'ml'
]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "pytest_asyncio",
    "pytest-dotenv", # for loading .env in testing environment
    "pytest-retry", # for retrying failed tests
    "nest_asyncio"
]
extra-args = ["-vv"]

[tool.pytest]
env_files = [
    ".env"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
pythonpath = "src"
testpaths=["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning:bs4.builder._lxml",
    "ignore:pkg_resources is deprecated:DeprecationWarning:pymilvus.client",
    "ignore:The '__version_info__' attribute is deprecated:DeprecationWarning:environs",
    "ignore:Failing to pass a value to the 'type_params' parameter of 'typing.ForwardRef._evaluate':DeprecationWarning"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]